--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,19 +22,22 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     
-    - name: Cache pip dependencies
+    - name: Install uv
+      run: curl -LsSf https://astral.sh/uv/install.sh | sh
+    
+    - name: Cache uv dependencies
       uses: actions/cache@v3
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('apps/api/requirements*.txt') }}
+        path: ~/.cache/uv
+        key: ${{ runner.os }}-uv-${{ hashFiles('apps/api/pyproject.toml') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
-    
-    - name: Install dependencies
+          ${{ runner.os }}-uv-
+
+    - name: Install dependencies with uv
       run: |
+        source $HOME/.cargo/env
         cd apps/api
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt -r requirements-dev.txt
+        uv pip install .
     
     - name: Run API tests
       run: |
@@ -54,27 +57,27 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Node.js
+    - name: Set up Node.js and pnpm
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-        cache: 'npm'
-        cache-dependency-path: apps/admin_web/package-lock.json
-    
+    - uses: pnpm/action-setup@v2
+      with:
+        version: 8
+        run_install: true
+
     - name: Install dependencies
-      run: |
-        cd apps/admin_web
-        npm ci
+      run: pnpm install
     
     - name: Run web tests
       run: |
         cd apps/admin_web
-        npm run test --if-present
+        pnpm run test --if-present
     
     - name: Run web linting
       run: |
         cd apps/admin_web
-        npm run lint --if-present
+        pnpm run lint --if-present
 
   test-mobile:
     runs-on: ubuntu-latest
@@ -85,7 +88,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.19.0'
+        flutter-version: '3.22.0'
         channel: 'stable'
     
     - name: Install dependencies
@@ -130,11 +133,22 @@ jobs:
       with:
         python-version: '3.11'
     
-    - name: Install dependencies
+    - name: Install uv
+      run: curl -LsSf https://astral.sh/uv/install.sh | sh
+
+    - name: Cache uv dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/uv
+        key: ${{ runner.os }}-uv-${{ hashFiles('apps/api/pyproject.toml') }}
+        restore-keys: |
+          ${{ runner.os }}-uv-
+
+    - name: Install dependencies with uv
       run: |
+        source $HOME/.cargo/env
         cd apps/api
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt -r requirements-dev.txt
+        uv pip install .
     
     - name: Wait for Neo4j
       run: |
