--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,8 @@ jobs:
     - name: Install dependencies with uv
       run: |
         source $HOME/.cargo/env
+        uv venv
+        source .venv/bin/activate
         cd apps/api
         uv pip install .
     
@@ -70,14 +72,10 @@ jobs:
       run: pnpm install
     
     - name: Run web tests
-      run: |
-        cd apps/admin_web
-        pnpm run test --if-present
+      run: pnpm -w run test --if-present
     
     - name: Run web linting
-      run: |
-        cd apps/admin_web
-        pnpm run lint --if-present
+      run: pnpm -w run lint --if-present
 
   test-mobile:
     runs-on: ubuntu-latest
@@ -88,7 +86,7 @@ jobs:
     - name: Set up Flutter
       uses: subosito/flutter-action@v2
       with:
-        flutter-version: '3.22.0'
+        flutter-version: '3.35.1'
         channel: 'stable'
     
     - name: Install dependencies
@@ -147,6 +145,8 @@ jobs:
     - name: Install dependencies with uv
       run: |
         source $HOME/.cargo/env
+        uv venv
+        source .venv/bin/activate
         cd apps/api
         uv pip install .
     
