fix: resolve most flake8 linting errors and web build issues

--- a/apps/admin_web/package.json
+++ b/apps/admin_web/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "react-admin",
   "private": true,
@@ -12,6 +11,8 @@
     "lint": "echo \"Error: no lint specified\" && exit 0"
   },
   "dependencies": {
+    "firebase": "^12.1.0",
+    "lucide-react": "^0.539.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
