--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "name": "living-twin-monorepo",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "dev": "pnpm --filter admin_web dev",
     "build": "pnpm --filter admin_web build",
     "lint": "pnpm --filter admin_web lint",
     "test": "pnpm --filter admin_web test"
-  },
-  "devDependencies": {
-    "vite": "^5.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.53.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "prettier": "^3.1.0"
   }
 }
