--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -22,10 +22,11 @@ jobs:
 
       - uses: actions/setup-node@v4
         with: { node-version: '18' }
-      - run: npm ci
-        working-directory: frontend/react_admin
-      - run: npm run build
-        working-directory: frontend/react_admin
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+      - run: pnpm install
+      - run: pnpm --filter admin_web build
 
       - name: Auth to GCP (OIDC)
         id: auth
