Fix markdownlint warnings: MD022, MD032, MD029, MD024 - Add blank lines around headings and lists

--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "build": "pnpm --filter admin_web build",
     "lint": "pnpm --filter admin_web lint",
     "test": "pnpm --filter admin_web test"
+  },
+  "devDependencies": {
+    "markdownlint-cli": "^0.32.2"
   }
 }
