--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -26,11 +26,20 @@ dependencies:
   just_audio: ^0.9.46
   # Voice activity detection - using noise_meter instead
   noise_meter: ^5.0.1
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  # Dependency injection
+  get_it: ^7.6.4
+  injectable: ^2.3.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.7.0
+  freezed: ^3.2.0
+  json_serializable: ^6.10.0
+  injectable_generator: ^2.4.1
 
 flutter:
   uses-material-design: true
