feat: Add comprehensive monitoring and update system documentation
- Add GlitchTip (Sentry-compatible) error tracking to web and mobile apps
- Update system architecture documentation with current monitoring capabilities
- Create comprehensive system overview document
- Update system management presentation with monitoring and security info
- Add Sentry setup documentation and configuration
- Enhance mobile app with error handling and crash reporting
- Update web app with TypeScript improvements and error boundaries
- Add dependency update guide and installation scripts
- Improve API with health checks and monitoring endpoints
- Update all documentation to reflect current production-ready status

This commit establishes comprehensive monitoring across all applications
and provides up-to-date documentation for the Living Twin platform.

--- a/apps/admin_web/.env.example
+++ b/apps/admin_web/.env.example
@@ -23,3 +23,8 @@ VITE_FIREBASE_STORAGE_EMULATOR_HOST=localhost:9199
 VITE_ENABLE_DEBUG_FEATURES=true
 VITE_ENABLE_ANALYTICS=false
 VITE_ENABLE_OFFLINE_MODE=true
+
+# Sentry Configuration for GlitchTip
+VITE_SENTRY_DSN=https://your-glitchtip-instance.com/1
+VITE_SENTRY_ENVIRONMENT=development
+VITE_SENTRY_RELEASE=react-admin@1.0.0
