--- a/.env.example
+++ b/.env.example
@@ -1,47 +1,58 @@
-# Environment variables for living_twin_monorepo
-# Copy this to .env and fill in your actual values
+# Living Twin Monorepo Environment Variables
 
-# ==== OpenAI ====
-OPENAI_API_KEY=sk-your-openai-api-key-here
-# Optional: if your key belongs to multiple orgs
-# OPENAI_ORG_ID=org-your-org-id-here
+# Python API Configuration
+OPENAI_API_KEY=your-openai-api-key-here
+ENVIRONMENT=development
+API_VERSION=1.0.0
+DEBUG=false
 
-# ==== Neo4j (local dev) ====
+# Neo4j Database
 NEO4J_URI=neo4j://localhost:7687
 NEO4J_USER=neo4j
 NEO4J_PASSWORD=password
+NEO4J_DB=neo4j
+NEO4J_MAX_CONNECTIONS=50
+NEO4J_CONNECTION_TIMEOUT=30.0
+VECTOR_INDEX_NAME=docEmbeddings
 
-# ==== GCP ====
-PROJECT_ID=your-gcp-project-id
-REGION=europe-west1
-GCP_ACCESS_TOKEN=your-gcp-access-token
+# Redis Cache & Rate Limiting
+REDIS_URL=redis://:redis123@localhost:6379
+REDIS_PASSWORD=redis123
+REDIS_MAX_CONNECTIONS=50
+RATE_LIMIT_ENABLED=true
+RATE_LIMIT_DEFAULT="100 per minute"
+RATE_LIMIT_BURST="20 per second"
 
-# ==== Production (optional) ====
-# OPENAI_API_KEY_PROD=sk-your-prod-openai-key
-# NEO4J_URI_PROD=neo4j://your-prod-neo4j-uri:7687
-# NEO4J_USER_PROD=your-prod-user
-# NEO4J_PASSWORD_PROD=your-prod-password
+# Firebase Configuration
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_CREDENTIALS_PATH=path/to/credentials.json
+FIRESTORE_EMULATOR_HOST=localhost:8080
+FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
+FIREBASE_TOKEN=demo-token
 
-# ==== RAG Configuration ====
-LLM_PROVIDER=openai      # openai | ollama | stub
-LLM_MODEL=gpt-4o-mini
-EMBEDDINGS_MODEL=text-embedding-3-small
-LOCAL_EMBEDDINGS=0       # set 1 to use local sentence-transformers
-LOCAL_EMBEDDINGS_MODEL=sentence-transformers/all-MiniLM-L6-v2
-RAG_ONLY=0               # set 1 to skip LLM calls and echo top snippets
+# Local Development
+USE_LOCAL_MOCK=true
+LOCAL_DATA_DIR=./local_data
+AUTO_ENSURE_VECTOR_INDEX=true
+ASYNC_INGEST=true
 
-# ==== Ollama (if LLM_PROVIDER=ollama) ====
-OLLAMA_BASE=http://localhost:11434
-OLLAMA_MODEL=llama3
+# Admin Web Configuration
+VITE_API_URL=http://localhost:8000
+VITE_FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
+VITE_FIRESTORE_EMULATOR_HOST=localhost:8080
 
-# ==== Firebase (Production) ====
-# FIREBASE_PROJECT_ID=your-firebase-project-id
-# FIREBASE_CREDENTIALS_PATH=./path/to/firebase-credentials.json
+# Mobile App Configuration (apps/mobile/.env)
+API_BASE_URL=http://localhost:8000
+API_TIMEOUT=30000
+API_RETRY_ATTEMPTS=3
+PIN_REQUIRED=false
+BIOMETRIC_ENABLED=true
+SECURE_STORAGE_ENABLED=true
+CACHE_MEMORY_SIZE=100
+CACHE_DISK_SIZE_MB=50
+CACHE_TTL_HOURS=24
 
-# ==== Development Toggles ====
-ENVIRONMENT=development
-DEBUG=true
-USE_LOCAL_MOCK=false
-
-# ==== GITHUB ====
-GITHUB_TOKEN=github_pat_...
+# Sentry Error Tracking (Optional)
+SENTRY_DSN=your-sentry-dsn-here
+SENTRY_ENVIRONMENT=development
+SENTRY_TRACES_SAMPLE_RATE=0.1
