--- a/apps/admin_web/package.json
+++ b/apps/admin_web/package.json
@@ -17,7 +17,9 @@
     "firebase": "^12.1.0",
     "lucide-react": "^0.539.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@sentry/react": "^7.108.0",
+    "@sentry/tracing": "^7.108.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
