--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -50,6 +50,9 @@ dependencies = [
     "PyPDF2>=3.0.1",
     "python-docx>=1.1.2",
     "gunicorn>=22.0.0",
+    "redis[hiredis]>=5.0.0",
+    "slowapi>=0.1.9",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
