--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 
 version: "3.9"
 services:
+  # Redis for caching and rate limiting
+  redis:
+    image: redis:7-alpine
+    container_name: redis-twin
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-redis123}
+    healthcheck:
+      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   # Neo4j for knowledge graph and vector search
   neo4j:
     image: neo4j:5.20
@@ -50,15 +66,22 @@ services:
       - NEO4J_USER=neo4j
       - NEO4J_PASSWORD=password
       - NEO4J_DB=neo4j
+      - NEO4J_MAX_CONNECTIONS=50
       - VECTOR_INDEX_NAME=docEmbeddings
+      - REDIS_URL=redis://:${REDIS_PASSWORD:-redis123}@redis:6379
+      - REDIS_MAX_CONNECTIONS=50
+      - RATE_LIMIT_ENABLED=true
       - ENVIRONMENT=development
       - USE_LOCAL_MOCK=true
       - FIRESTORE_EMULATOR_HOST=firebase-emulator:8080
       - FIREBASE_AUTH_EMULATOR_HOST=firebase-emulator:9099
       - AUTO_ENSURE_VECTOR_INDEX=true
       - ASYNC_INGEST=true
+      - API_VERSION=1.0.0
     depends_on:
       neo4j:
+        condition: service_healthy
+      redis:
         condition: service_healthy
       firebase-emulator:
         condition: service_started
@@ -117,4 +140,5 @@ services:
 
 volumes:
   neo4j_data:
+  redis_data:
   firebase_data:
